--- a/resources/public/main.htm
+++ b/resources/public/main.htm
@@ -1,18 +1,86 @@
-<html>
+<!doctype html>
+<html ng-app>
 	<head>
-		<title>Prop Shop - Property Management for Applications</title>
-		<script src="https://code.angularjs.org/tools/system.js"></script>
-		<script src="https://code.angularjs.org/tools/typescript.js"></script>
-		<script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.dev.js"></script>
-		<script>
-          System.config({
-            transpiler: 'typescript',
-            typescriptOptions: { emitDecoratorMetadata: true }
-          });
-          System.import('./main.ts');
-		</script>
+		<!--  Bootstrap -->
+		<link rel="stylesheet" href="external/bootstrap/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="external/bootstrap/css/bootstrap-theme.min.css" />
+		<script src="external/bootstrap/js/bootstrap.min.js"></script>
+
+		<!--  Angular -->
+		<script src="external/angularjs/angular.min.js"></script>
+
+		<!--  Angular Bootstrap -->
+		<script src="external/ng-bootstrap/ui-bootstrap-custom-0.14.3.js"></script>
+
+		<!--  Prop Shop -->
+		<link rel="stylesheet" href="style/prop-shop.css" />
+		<script src="script/prop-shop.js"></script>
 	</head>
 	<body>
-		<prop-shop>loading...</prop-shop>
+		<header>
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="#">Prop Shop</a>
+					</div>
+
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+							<li><a href="#">Link</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#">Action</a></li>
+									<li><a href="#">Another action</a></li>
+									<li><a href="#">Something else here</a></li>
+									<li role="separator" class="divider"></li>
+									<li><a href="#">Separated link</a></li>
+									<li role="separator" class="divider"></li>
+									<li><a href="#">One more separated link</a></li>
+								</ul>
+							</li>
+						</ul>
+						<form class="navbar-form navbar-left" role="search">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Search">
+							</div>
+							<button type="submit" class="btn btn-default">Submit</button>
+						</form>
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="#">Link</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+								<ul class="dropdown-menu">
+									<li><a href="#">Action</a></li>
+									<li><a href="#">Another action</a></li>
+									<li><a href="#">Something else here</a></li>
+									<li role="separator" class="divider"></li>
+									<li><a href="#">Separated link</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
+			</nav>
+		</header>
+		<div>
+			<label>Name:</label>
+			<input type="text" ng-model="yourName" placeholder="Enter a name here">
+			<hr>
+			<h1>Hello {{yourName}}!</h1>
+		</div>
+
+		<footer>
+
+		</footer>
 	</body>
 </html>
