--- a/resources/public/main.htm
+++ b/resources/public/main.htm
@@ -1,6 +1,9 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="propShopApp">
 	<head>
+		<!--  jQuery -->
+		<script src="external/jquery/jquery-1.11.3.min.js"></script>
+
 		<!--  Bootstrap -->
 		<link rel="stylesheet" href="external/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="external/bootstrap/css/bootstrap-theme.min.css" />
@@ -8,6 +11,7 @@
 
 		<!--  Angular -->
 		<script src="external/angularjs/angular.min.js"></script>
+		<script src="external/angularjs/angular-route.js"></script>
 
 		<!--  Angular Bootstrap -->
 		<script src="external/ng-bootstrap/ui-bootstrap-custom-0.14.3.js"></script>
