--- a/resources/public/main.htm
+++ b/resources/public/main.htm
@@ -1,27 +1,15 @@
 <!doctype html>
 <html ng-app="propShopApp">
 	<head>
-		<!--  jQuery -->
-		<script src="external/jquery/jquery-1.11.3.min.js"></script>
-
 		<!--  Bootstrap -->
 		<link rel="stylesheet" href="external/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="external/bootstrap/css/bootstrap-theme.min.css" />
-		<script src="external/bootstrap/js/bootstrap.min.js"></script>
-
-		<!--  Angular -->
-		<script src="external/angularjs/angular.min.js"></script>
-		<script src="external/angularjs/angular-route.js"></script>
-
-		<!--  Angular Bootstrap -->
-		<script src="external/ng-bootstrap/ui-bootstrap-custom-0.14.3.js"></script>
 
 		<!--  Prop Shop -->
-		<link rel="stylesheet" href="style/prop-shop.css" />
-		<script src="script/prop-shop.js"></script>
+		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body>
-		<header>
+		<header ng-controller="headerController">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<!-- Brand and toggle get grouped for better mobile display -->
@@ -37,38 +25,21 @@
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-							<li><a href="#">Link</a></li>
-							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-								<ul class="dropdown-menu">
-									<li><a href="#">Action</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something else here</a></li>
-									<li role="separator" class="divider"></li>
-									<li><a href="#">Separated link</a></li>
-									<li role="separator" class="divider"></li>
-									<li><a href="#">One more separated link</a></li>
-								</ul>
-							</li>
+							<li><a href="#dashboard">Dashboard</a></li>
+							<li><a href="#property">Properties</a></li>
 						</ul>
-						<form class="navbar-form navbar-left" role="search">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Search">
-							</div>
-							<button type="submit" class="btn btn-default">Submit</button>
-						</form>
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#">Link</a></li>
 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+								<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
 								<ul class="dropdown-menu">
-									<li><a href="#">Action</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something else here</a></li>
+									<li><a href="#user">Users</a></li>
+									<li><a href="#application">Applications</a></li>
 									<li role="separator" class="divider"></li>
-									<li><a href="#">Separated link</a></li>
+									<li><a href="#environment">Environments</a></li>
+									<li><a href="#category">Categories</a></li>
+									<li><a href="#tag">Tags</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -76,15 +47,38 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 		</header>
-		<div>
-			<label>Name:</label>
-			<input type="text" ng-model="yourName" placeholder="Enter a name here">
-			<hr>
-			<h1>Hello {{yourName}}!</h1>
-		</div>
+
+		<div ng-view class="app container" ng-hide="template.loading">
+        </div>
 
 		<footer>
 
 		</footer>
+
+		<!--  jQuery -->
+		<script src="external/jquery/jquery-1.11.3.min.js"></script>
+
+		<!--  Bootstrap -->
+		<script src="external/bootstrap/js/bootstrap.min.js"></script>
+
+		<!--  Angular -->
+		<script src="external/angularjs/angular.min.js"></script>
+		<script src="external/angularjs/angular-route.js"></script>
+
+		<!--  Angular Bootstrap -->
+		<script src="external/ng-bootstrap/ui-bootstrap-custom-0.14.3.js"></script>
+
+		<!--  Prop Shop -->
+		<script src="main.js"></script>
+		<script src="modules/common/error.js"></script>
+		<script src="modules/common/header.js"></script>
+		<script src="modules/application/application.js"></script>
+		<script src="modules/category/category.js"></script>
+		<script src="modules/dashboard/dashboard.js"></script>
+		<script src="modules/environment/environment.js"></script>
+		<script src="modules/property/property.js"></script>
+		<script src="modules/tag/tag.js"></script>
+		<script src="modules/user/user.js"></script>
+
 	</body>
 </html>
